--- a/z1.html
+++ b/z1.html
@@ -1,31 +1,45 @@
 <html>
 <head>
 <style>
-h1{
-color:blue;
+body{
+   background:url(https://www.apple.com/ac/structured-data/images/open_graph_logo.png?202201030840);
+   background-size:100% 100%;
+   background-repeat:no-repeat;
 }
-p{
-color:navy;
+h1{
+  font-size:70px;
+}
+h2{
+   background:black;
+   box-shadow:0px 0px 10px blue;
+   border-radius:15px;
+   padding:20px;
+   margin-left:15px;
+}
+a{
+   color:white;
+   text-decoration:none;
+   border-radius:9px;
+   border:2px solid white;
+   padding:10px;
+}
+.a2{
+   background:purple;
+   color:white;
+   padding:10px;
+   font-size:35px;
+}
+img{
+  padding:10px;
 }
 </style>
 </head>
-<body>
-<h1 align="center">Про силу слова.</h1>
-<p align="left">Страшні слова, коли вони мовчать<br>
-Страшні слова, коли вони мовчать,<br>
-коли вони зненацька причаїлись,<br>
-коли не знаєш, з чого їх почать,<br>
-бо всі слова були уже чиїмись.</p>
-
-<p align="center">Хтось ними плакав, мучивсь, болів,<br>
-із них почав і ними ж і завершив.<br>
-Людей мільярди і мільярди слів,<br>
-а ти їх маєш вимовити вперше!</p>
-
-<p align="right">Все повторялось: і краса, й потворність.<br>
-Усе було: асфальти й спориші.<br>
-Поезія – це завжди неповторність,<br>
-якийсь безсмертний дотик до душі.</p>
-
+<body><h2>
+<a href="z1.html">IPHONE</a>
+<a href="z1_2.html">IPAD</a>
+</h2>
+<h1 align="center">iPhone 11 PRO</h1>
+<img src="https://img.ktc.ua/img/base/1_395/5/264995.jpg" align="center">
+<a href=""  class="a2" align="center">Купити</a>
 </body>
 </html>
